# screen-goated-toolbox

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  WINDOWS_ARM_TOOLCHAIN_SETUP.ps1  app.rc  build.ps1  build.rs  index.html  installer.nsi  privacy-policy.html  repomix-android.xml  repomix-export-performance-code.xml  repomix-export-performance-frontend.xml  repomix-export-performance-full.xml  repomix-export-performance-native.xml  repomix-output.xml  repomix-rest.xml  repomix-screen-recorder.xml  run-arm-check.cmd  run-dev.ps1  tmp-release-notes-5.1.txt
.cargo/: config.toml
.claude/: CLAUDE.md  settings.local.json
.claude/commands/: add-cursor-pack.md  manage-background-presets.md  manage-model-catalog.md
.claude/parity/: api-key-notifications.md  app-update.md  bilingual-relay.md  custom-models-dialog.md  feature-template.md  gemini-live-session.md  gemini-s2s-vad.md  gemini-voice-catalog.md  help-assistant.md  history-ui.md  image-to-3d.md  image-to-svg.md  live-translate.md  mobile-shell.md  model-catalog.md  offline-asr-stream.md  phone-control.md  preset-audio.md  preset-system.md  render-camera-cursor.md  translation-gummy.md  tts-runtime.md  usage-tips.md  video-downloader.md  zipformer-catalog.md
.codex/: config.toml
.github/workflows/: qwen3-native-runtime.yml  qwen3-reference-sidecar.yml
3d-generator-ui/: index.html  package-lock.json  package.json  vite.config.ts
3d-generator-ui/src/: i18n.ts  main.ts  styles.css  viewer.ts
bilingual-relay-ui/: index.html  package-lock.json  package.json
bilingual-relay-ui/src/: main.ts  styles.css
build_support/: model_catalog.rs  model_catalog_validation.rs
catalog/: README.md  model_catalog.json
docs/: COMPUTER_CONTROL_DEVELOPMENT.md  DEVELOPMENT.md  RELEASING.md  WEBVIEW2_INITIALIZATION.md  WINDOWS_ARM64_SUPPORT.md  qwen3-turboquant-research.md
image-to-svg-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
image-to-svg-ui/src/: i18n.ts  main.ts  styles.css
mobile/: .gitignore  .sgtp.json  README.md  build-release.ps1  build.gradle.kts  gradle.properties  settings.gradle.kts
mobile/androidApp/: build.gradle.kts  proguard-rules.pro
mobile/androidApp/native/ort_proxy/: CMakeLists.txt  ort_proxy.cpp
mobile/feature_asr_moonshine/: build.gradle.kts
mobile/feature_asr_ort/: build.gradle.kts
mobile/feature_asr_sherpa/: build.gradle.kts
mobile/feature_creation_runtime/: build.gradle.kts
mobile/feature_native_cpp/: build.gradle.kts
mobile/gradle/: libs.versions.toml
mobile/scripts/: build-ort-proxy.ps1  collect-phone-control-diagnostics.ps1  invoke-phone-control-probe.ps1  phone-control-device-state.ps1  phone-control-external-setup.ps1  phone-control-package-install.ps1  quantize_parakeet.py  run-phone-control-tests.ps1  sgtp-wsl.sh  sgtp.cmd  sgtp.ps1
mobile/shared/: build.gradle.kts
native/: README.md  README_TTS_RUNTIME_FFI.md
native/magpie_runtime/: README.md  environment.yml
native/moonshine_wrapper/: moonshine_wrapper.c  moonshine_wrapper.def
native/qwen3_reference_sidecar/: README.md
native/qwen3_runtime/: Cargo.toml  README.md
native/qwen3_turboquant/: CMakeLists.txt  Cargo.toml
native/qwen3_turboquant/include/: sgt_qwen3_runtime.h
native/qwen3_turboquant/src/: lib.rs  sgt_qwen3_runtime_stub.cu
native/sgt_tts_runtime/: Cargo.toml
native/sgt_tts_runtime_py/: synthesize.py
native/step_audio_runtime/: README.md  TESTING.md  environment.yml
native/vieneu_runtime/: README.md
native/voxtral_runtime/: README.md
parity-fixtures/api-key-notifications/: triggers.json
parity-fixtures/app-update/: latest-release.json
parity-fixtures/bilingual-relay/: onboarding-contract.json  prompt-contract.json
parity-fixtures/gemini-live-session/: lifecycle.json
promptdj-midi/: README.md  index.css  index.html  index.tsx  package-lock.json  package.json  vite.config.ts
promptdj-midi/components/: OnboardingPopup.ts  (+6 more)
screen-record/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.gen.config.ts
scripts/: build_moonshine_wrapper.ps1  build_qwen3_reference_sidecar.ps1  build_qwen3_runtime.ps1  build_qwen3_turboquant_runtime.ps1  check-docs.py  detect_unaccented_vietnamese.py  download_material_symbols.sh  egui-snarl-scroll-zoom.patch  ensure-rollup-native.mjs  export_ui_detr.py  generate_android_phone_control_contract.py  generate_android_preset_model_catalog.py  help_index_build.py  help_index_query.py  i18n_scan.mjs  i18n_scan_report.json  pack-browser-ext.ps1  play_publish.py  run_desktop_dev.ps1  setup-egui-snarl.ps1  validate-windows-targets.ps1
src/: api.rs  app_activation.rs  app_entry.rs  app_state.rs  atomic_json.rs  config.rs  debug_log.rs  gui.rs  history.rs  icon_gen.rs  initialization.rs  lang_detect.rs  main.rs  model_config.rs  overlay.rs  paths.rs  registry_integration.rs  retry_model_chain.rs  runtime_support.rs  screen_capture.rs  source_contract_tests.rs  startup_launch.rs  unpack_dlls.rs  updater.rs  win_types.rs
tests/: COMPUTER_CONTROL_GOLDEN_SUITE.md  VISION_GROUNDING_BENCHMARK.md  computer_control_golden_suite.json  computer_control_golden_suite_check.mjs  computer_control_lab.html  computer_control_lab_runner.mjs  computer_control_scenarios.json  computer_control_trace_check.mjs  computer_control_trace_completion_checks.mjs  computer_control_trace_completion_checks.test.mjs  computer_control_trace_diagnostic_checks.mjs  computer_control_trace_diagnostic_checks.test.mjs  computer_control_trace_media_checks.mjs  computer_control_trace_media_checks.test.mjs  computer_control_trace_metrics.mjs  computer_control_trace_observation_checks.mjs  computer_control_trace_observation_checks.test.mjs  computer_control_trace_terminal_checks.mjs  computer_control_trace_terminal_checks.test.mjs
translation-gummy-ui/: index.html  package-lock.json  package.json  vite.config.ts
tts-playground-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
(+2286 files in other folders)
