[package]
name = "screen-goated-toolbox"
version = "4.8.0"
edition = "2024"

[build-dependencies]
winres = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "bmp"] }

[dependencies]
# Network & Serialization
ureq = { version = "3.2", features = ["json", "native-tls"] }
tungstenite = { version = "0.28", features = ["native-tls"] }
native-tls = "0.2"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.22"
self_update = { version = "0.42", features = ["archive-zip", "compression-zip-deflate"] }
zip = "8.2"
flate2 = "1.1"
byteorder = "1.5"
rayon = "1.11"

# Image Processing
image = { version = "0.25", default-features = false, features = ["png", "bmp", "jpeg", "gif", "webp", "tiff"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# System
dirs = "6.0"
lazy_static = "1.5"
textwrap = "0.16"
open = "5.3"
sys-locale = "0.3"
winreg = "0.55"
auto-launch = "0.6"
urlencoding = "2.1"

# Language Data
isolang = { version = "2.4", features = ["serde", "english_names"] }
whatlang = "0.18"

# GUI & Media
eframe = { version = "0.33", default-features = false, features = ["glow"] }
egui-snarl = { path = "libs/egui-snarl", features = ["serde"] }
tray-icon = "0.21.3"
cpal = "0.17"
hound = "3.5"
wasapi = "0.22"
minimp3 = "0.6"
egui_extras = { version = "0.33", features = ["all_loaders"] }
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav", "aac", "alac", "pcm"] }

# Markdown Rendering
pulldown-cmark = "0.13"
wry = "0.54.2"
raw-window-handle = "0.6"
windows-core = "0.62"
parakeet-rs = { version = "0.3.3", features = ["directml"] }
ort = { version = "2.0.0-rc.12", features = ["directml", "load-dynamic"] }
ringbuf = "0.4.8"
dark-light = "2.0.0"
windows-capture = "1.5.0"
rdev = "0.5.3"
tiny_http = "0.12"
memmap2 = "0.9.10"
parking_lot = "0.12"
crossbeam-queue = "0.3"

# Vector Graphics Rendering
resvg = "0.47"
tiny-skia = "0.12"

# GPU Rendering
wgpu = "28.0.0"
pollster = "0.4"
bytemuck = { version = "1.25", features = ["derive"] }

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Dwm",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_System_SystemInformation",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Accessibility",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D11on12",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_MediaFoundation",
    "Win32_Storage_Xps",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
debug = 1
panic = "unwind"

[patch.crates-io]
parakeet-rs = { path = "third_party/parakeet-rs" }
windows-capture = { path = "third_party/windows-capture" }

[target.'cfg(all(target_os = "windows", target_env = "msvc"))'.dependencies]
unrar = "0.5.8"

[target.'cfg(target_os = "windows")'.dependencies]
