[package]
name = "sgt-qwen3-turboquant"
version = "0.1.0"
edition = "2021"

[lib]
name = "sgt_qwen3_turboquant"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tch = "0.20"
qwen3_asr_rs = { package = "qwen3-asr-rs", path = "../../third_party/qwen3-asr-rs" }
